[project]
name = "langgraph-chatbot"
version = "0.1.0"
description = "LangGraph RAG Chatbot powered by Google Gemini AI"
readme = "README.md"
# pandas==2.2.3 and other pinned packages only have wheels for Python 3.9-3.12.
# Using >=3.10,<3.13 keeps compatibility with README's "Python 3.10+" intent
# while ensuring uv downloads a compatible Python if the system has 3.13+.
requires-python = ">=3.10,<3.13"

dependencies = [
    # --- Web Framework ---
    "aiofiles==24.1.0",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.7",
    "fastjsonschema==2.21.1",
    "python-multipart==0.0.20",
    "uvicorn==0.34.0",
    # --- LangChain / LangGraph ---
    "langchain>=0.3.0,<2.0.0",
    "langchain-core>=0.3.0,<2.0.0",
    "langchain-openai>=0.3.0,<2.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-tavily==0.2.13",
    "langchain-text-splitters==1.0.0",
    # 0.2.13 is the first version supporting langchain-core 1.0+ and pinecone>=6.0.0
    "langchain-pinecone==0.2.13",
    "langgraph==1.0.2",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.41",
    # --- Vector DB ---
    # Must be <8.0.0 for langchain-pinecone 0.2.x compatibility
    "pinecone>=6.0.0,<8.0.0",
    # --- LLM / AI ---
    "openai==2.7.1",
    "google-generativeai",
    "transformers==4.48.0",
    "tiktoken==0.8.0",
    # --- Data ---
    "pandas==2.2.3",
    "pypdf==5.1.0",
    # --- Config / Settings ---
    "annotated-types==0.7.0",
    "pydantic>=2.11.1",         # 0.2.13 requires >=2.11.1
    "pydantic-settings>=2.7.1",
    # pydantic-core is managed automatically by pydantic
    "python-dotenv==1.0.1",
    # --- Utilities ---
    "filelock==3.16.1",
    "loguru==0.7.3",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.2.1",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "schema==0.7.7",
    # --- Frontend ---
    "streamlit==1.41.1",
    # --- Dev / Test ---
    "mypy==1.14.1",
    "mypy-extensions==1.0.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
]

[tool.uv]
# This is an application, not an installable library.
# uv will only install the dependencies listed above, not the project itself.
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
